--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,8 @@ body {
   color: var(--basic-text-color);
 }
 
-.list {
+.list,
+.pf-type-item {
   list-style: none;
 }
 
@@ -75,9 +76,8 @@ body {
 .hero {
   background-color: #2f303a;
 }
-.hero-content {
+.hero-title {
   font-family: "Roboto";
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -99,7 +99,6 @@ body {
 /*-- Section 2 - Benefits -- */
 .benefits-title {
   font-family: "Roboto";
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -107,7 +106,6 @@ body {
 }
 .benefits-item-content {
   font-family: "Roboto";
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -116,10 +114,115 @@ body {
 /*-- Section 3 - Work -- */
 .work-title {
   font-family: "Roboto";
-  font-weight: 700;
   font-size: 36px;
-  line-height: 1.16;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--header-color);
+}
+
+/*-- Section 3 - Our team -- */
+
+.team-title {
+  font-family: "Roboto";
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--first-title-color);
+}
+
+.team-item-title {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--first-title-color);
+}
+.team-item-profession {
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/*-- Footer -- */
+.footer-list-address:hover,
+.footer-list-address:focus,
+.footer-list-mail:focus,
+.footer-list-mail:hover,
+.footer-list-tel:focus,
+.footer-list-tel:hover {
+  color: var(--accent-color);
+}
+.footer {
+  background-color: #2f303a;
+}
+
+.footer-logo {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+.footer-logo-part {
+  color: var(--second-title-color);
+}
+
+.footer-list-address {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.footer-list-mail,
+.footer-list-tel {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/*-- PORTFOLIO PAGE -- */
+.pf-type-btn:focus,
+.pf-type-btn:hover {
+  background-color: var(--accent-color);
+}
+
+.pf-type-btn {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.pf-item-title {
+  font-family: "Roboto";
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--first-title-color);
+}
+
+.pf-item-type {
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--basic-text-color);
 }
