--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ body {
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
+  text-transform: uppercase;
   letter-spacing: 0.06em;
   color: var(--second-title-color);
 }
@@ -99,6 +100,7 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: var(--first-title-color);
 }
 .benefits-item-content {
@@ -176,6 +178,7 @@ body {
 .pf-type-btn:focus,
 .pf-type-btn:hover {
   background-color: var(--accent-color);
+  color: var(--second-title-color);
 }
 
 .pf-type-btn {
